--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,28 @@
-
 version: '3.8'
-
+ 
 services:
-  web:
-    build: .
-    command: uvicorn app.main:app --host 0.0.0.0
-      - .:/app
+  server:
+    build:
+      context: ./app
+      dockerfile: Dockerfile
+    volumes:
+      - ./app/:/app/
+    command: uvicorn app.api.server:app --reload --workers 1 --host 0.0.0.0 --port 8000
+    env_file:
+      - ./app/.env
     ports:
       - 8000:8000
-    environment:
-      - DATABASE_URL=postgresql://postgres:Lexa2015@localhost:5432/cats-testwork
     depends_on:
       - db
+ 
   db:
     image: postgres:15-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-    expose:
-      - 5432
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=lexa2015
-      - POSTGRES_DB=cats-testwork
-
+    env_file:
+      - ./app/.env
+    ports:
+      - 5432:5432
+ 
 volumes:
-  postgres_data:
+    postgres_data:
