--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   server:
     build:
-      context: ./app
+      context: .
       dockerfile: Dockerfile
     volumes:
       - ./app/:/app/
