--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,26 @@
-version: '3.8'
- 
+version: '3.7'
+
 services:
-  server:
-    build:
-      context: .
-      dockerfile: Dockerfile
+  nudges:
+    build: .
+    command: uvicorn app.main:app --host 0.0.0.0 --port 80
     volumes:
-      - ./app/:/app/
-    command: uvicorn app.api.server:app --reload --workers 1 --host 127.0.0.1 --port 8000
-    env_file:
-      - ./app/.env
+      - .:/usr/src/personalised_nudges
     ports:
-      - 8000:8000
+      - 80:80
     depends_on:
       - db
- 
+
   db:
-    image: postgres:15-alpine
+    image: postgres:12.0-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-    env_file:
-      - ./app/.env
-    ports:
-      - 5432:5432
- 
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=Lexa2015
+      - POSTGRES_DB=cats-testwork
+    expose: 
+      - 5432
+
 volumes:
-    postgres_data:
+  postgres_data:
