--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,18 @@
-version: '3.7'
-
+version: '3.8'
 services:
-  nudges:
+  web:
     build: .
-    command: uvicorn app.main:app --host 0.0.0.0 --port 80
-    volumes:
-      - .:/usr/src/personalised_nudges
     ports:
-      - 80:80
+      - "8000:80"
     depends_on:
       - db
-
   db:
-    image: postgres:12.0-alpine
-    volumes:
-      - postgres_data:/var/lib/postgresql/data/
+    image: postgres:13
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=Lexa2015
-      - POSTGRES_DB=cats-testwork
-    expose: 
-      - 5432
-
+      POSTGRES_DB: mydatabase
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 volumes:
   postgres_data:
