--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,11 @@ services:
     depends_on:
       - db
   db:
-    image: postgres:13
+    image: postgres:15
     environment:
-      POSTGRES_DB: mydatabase
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
+      POSTGRES_DB: cats-testwork
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: Lexa2015
     volumes:
       - postgres_data:/var/lib/postgresql/data
 volumes:
