--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,27 @@
 version: '3.8'
+
 services:
   web:
-    build: 
-      context: ./app
+    build: .
+    command: bash -c 'while !</dev/tcp/db/5432; do sleep 1; done; uvicorn app.main:app --host 0.0.0.0'
+    volumes:
+      - .:/app
+    ports:
+      - 8008:8000
+    environment:
+      - DATABASE_URL=postgresql://postgres:Lexa2015@db:5432/cats-testwork
     depends_on:
       - db
-    
   db:
-    image: postgres:15
-    environment:
-      POSTGRES_DB: cats-testwork
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: Lexa2015
+    image: postgres:15-alpine
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data/
+    expose:
+      - 5432
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=Lexa2015
+      - POSTGRES_DB=cats-testwork
+
 volumes:
   postgres_data:
