--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,9 +19,10 @@ services:
     expose:
       - 5432
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=Lexa2015
-      - POSTGRES_DB=cats-testwork
+      - POSTGRES_USER = postgres
+      - POSTGRES_PASSWORD= Lexa2015
+      - POSTGRES_HOST = localhost
+      - POSTGRES_DB = cats-testwork
 
 volumes:
   postgres_data:
