--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     expose:
       - 5432
     environment:
-      - POSTGRES_USER=postgres
+      - POSTGRES_USER=cats-backend
       - POSTGRES_PASSWORD=12345
       - POSTGRES_DB=cats-testwork
 
