--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,8 @@ services:
     expose:
       - 5432
     environment:
-      - POSTGRES_USER=cats-backend
+      - POSTGRES_USER = cats-backend
+      - POSTGRES_PASSWORD= 12345
       - POSTGRES_DB=cats-testwork
 
 volumes:
